<resources>
    <string name="app_name">帐单</string>
    <string name="billing">记账</string>
    <string name="detail">详情</string>
    <string name="analyze">分析</string>
    <string name="budget">预算</string>
    <string name="to_billing">+ 记账</string>
    <string name="to_detail">显示详情</string>
    <string name="to_analyze">帐单分析</string>
    <string name="to_budget">制定预算</string>
    <string name="income">收入</string>
    <string name="to_income">添加收入</string>
    <string name="distribute">预算</string>
    <string name="to_distribute">分配预算</string>
    <string name="OK">完成</string>
    <string name="setting">设置</string>
    <string name="day_pay">今日支出:</string>
    <string name="default_double">0.00</string>
    <string name="month_pay">本月支出:</string>
    <string name="day">10月9日</string>
    <string name="week">星期六</string>
    <string name="month_income">本月收入:</string>
    <string name="numHint">请输入金额</string>
    <string name="input_extra">请输入备注</string>
    <string name="use_able_budget">该标签可用预算为：</string>
    <string name="add">增加</string>
    <string name="un_add">减少</string>
    <string name="now_saving">当前储蓄：</string>
    <string name="now_use_able">当前可支配资金：</string>
    <string name="use">使用</string>
    <string name="un_use">不使用</string>
    <string name="now_income">该月收入：</string>
    <string name="month_pay_2">该月支出：</string>
    <string name="father">请选择新建标签的父标签：</string>
    <string name="sign_name">请输入标签名（不超过4字）</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="__4"><![CDATA[请输入名字（不超过4字,不可以包含‘<’,‘>’,‘/’和\'\'）]]></string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="space" />
    <string name="detail_button">详细情况</string>
    <string name="bili">比例</string>
    <string name="all_price">总额</string>
</resources>