<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_income"
                android:textColor="@color/second_text"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text"
                android:textSize="20sp"
                android:text="@string/default_double"
                android:id="@+id/showMonthIncome"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_pay_2"
                android:textColor="@color/second_text"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text"
                android:textSize="20sp"
                android:text="@string/default_double"
                android:id="@+id/showMonthPay"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/cal"
    android:text="@string/OK"
    android:textSize="30sp"
    android:textColor="@color/main_text"
    android:layout_weight="1" />
</LinearLayout>
