<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@drawable/show"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="left"
            android:textColor="@color/second_text"
            android:text="@string/day_pay"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/default_double"
            android:id="@+id/day_pay"
            android:textSize="35sp"
            android:paddingStart="20dp"
            android:textColor="@color/main_text"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/second_text"
                android:textSize="20sp"
                android:text="@string/month_pay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/month_pay"
                android:textStyle="bold"
                android:text="@string/default_double"
                android:textSize="20sp"
                android:textColor="@color/main_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/main_text"
            android:gravity="right"
            android:id="@+id/time"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week"
            android:text="@string/week"
            android:textSize="30sp"
            android:textColor="@color/second_text"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_income"
                android:gravity="right"
                android:textSize="20sp"
                android:textColor="@color/second_text"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/month_income"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/main_text"
                android:text="@string/default_double" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>