<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.billing.component.MyTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/an_mt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textSize="20sp"
        android:textColor="@color/main_text"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:id="@+id/start_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textSize="20sp"
        android:textColor="@color/main_text"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:id="@+id/end_time" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:text="@string/space"
        android:padding="3dp"
        android:layout_margin="5dp"
        android:id="@+id/detail"
        android:layout_gravity="center"
        android:gravity="center" />

</LinearLayout>