<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.billing.component.MyTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mtt" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/all3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:textColor="@color/second_text"
            android:textSize="17sp"
            android:text="@string/out"
            android:id="@+id/add3"
            android:background="@drawable/if_add" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/in"
            android:textSize="17sp"
            android:id="@+id/un_add3"
            android:textColor="@color/second_text"
            android:background="@drawable/if_add" />
    </RadioGroup>

    <com.example.billing.component.MyRadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/second"
        android:id="@+id/first5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/__4"
        android:textColorHint="@color/second_text"
        android:textSize="20sp"
        android:maxLength="4"
        android:maxLines="1"
        android:background="@color/second"
        android:inputType="text"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/et3"
        android:autofillHints="" />

</LinearLayout>